--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Counter</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <h1>COUNTER</h1>
-    <p>0</p>
-    <button>Decrease</button>
-    <button>Reset</button>
-    <button>Increase</button>
+  <div class="container">
+    <div class="js-counter">
+      <h1>COUNTER</h1>
+      <p class="js-counter-number">0</p>
+      <button class="js-decrease">Decrease</button>
+      <button class="js-reset">Reset</button>
+      <button class="js-increase">Increase</button>
+    </div>
   </div>
+  <script src="index.js"></script>
   
 
 </body>
